# ese5190-final-project

./: .gitignore  CMakeLists.txt  README.md  auto_version.cmake
arm viz/: arm_viz.py
src/: CMakeLists.txt  robot_arm.c
src/devices/: PCA9685.c  joystick.c  nunchuck.c  point_track.c
src/devices/include/: PCA9685.h  joystick.h  nunchuck.h  point_track.h
src/motion_control/: ik_calculations.c  joint_control.c
src/motion_control/include/: ik_calculations.h  joint_control.h  robot_params.h
